# Audio2Face-3D-SDK

./: .gitignore  CITATION.md  CMakeLists.txt  README.md  build.bat  build.sh  download_models.bat  download_models.sh  fetch_deps.bat  fetch_deps.sh  gen_testdata.bat  gen_testdata.sh  run_sample.bat  run_sample.sh
audio2emotion-sdk/: CMakeLists.txt
audio2emotion-sdk/scripts/: common.py  gen_benchmark_data.py  gen_sample_data.py  gen_test_data.py  post_process.py  utils.py
audio2emotion-sdk/tests/: CMakeLists.txt  test_core_batch_post_processor.cpp  test_core_batch_post_processor_cuda.cu  test_core_batch_post_processor_cuda.h  test_core_executor.cpp  test_core_inference.cpp  test_core_interactive_executor.cpp  test_core_parse_helper.cpp  utils.h
audio2face-sdk/: CMakeLists.txt
audio2face-sdk/scripts/: common.py  data_utils.py  gen_sample_data.py  gen_test_data.py
audio2face-sdk/source/samples/a2f-web-inference/: CMakeLists.txt  main.cpp
audio2face-sdk/tests/: CMakeLists.txt  main.cpp  test_core_animator.cpp  test_core_animator_eyes.cpp  test_core_animator_teeth.cpp  test_core_batch_eyes_animator.cpp  test_core_batch_eyes_animator_cuda.cu  test_core_batch_eyes_animator_cuda.h  test_core_batch_pca_animator.cpp  test_core_batch_skin_animator.cpp  test_core_batch_skin_animator_cuda.h  (+16 more)
audio2x-common/: CMakeLists.txt
audio2x-sdk/: CMakeLists.txt  RELEASE_NOTES.md
docs/: README.md
licenses/: audio2x-sdk-LICENSE.txt
webui/: README.md  requirements.txt  run_webui.sh
webui-restapi/: .gitignore  README.md  claire_solved_arkit_offline.usd  index.html  server.py
(+274 files in other folders)
